GCC rejects the following strictly conforming TU with -pedantic-errors extern int x; #line 24 "" extern char z[sizeof __FILE__ == 1];
Subject: Bug 39646 Author: jsm28 Date: Sat Apr 18 17:36:28 2009 New Revision: 146319 URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=146319 Log: libcpp: PR preprocessor/39646 * include/line-map.h (enum lc_reason): Add LC_RENAME_VERBATIM. * line-map.c (linemap_add): Handle LC_RENAME_VERBATIM. * directives.c (do_line, do_linemarker): Use LC_RENAME_VERBATIM in place of LC_RENAME. gcc/testsuite: * gcc.dg/cpp/line8.c: New test. Added: trunk/gcc/testsuite/gcc.dg/cpp/line8.c Modified: trunk/gcc/testsuite/ChangeLog trunk/libcpp/ChangeLog trunk/libcpp/directives.c trunk/libcpp/include/line-map.h trunk/libcpp/line-map.c
Fixed for 4.5.