libcpp: 	PR preprocessor/39646 	* include/line-map.h (enum lc_reason): Add LC_RENAME_VERBATIM. 	* line-map.c (linemap_add): Handle LC_RENAME_VERBATIM. 	* directives.c (do_line, do_linemarker): Use LC_RENAME_VERBATIM in 	place of LC_RENAME.

gcc/testsuite:
	* gcc.dg/cpp/line8.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@146319 138bc75d-0d04-0410-961f-82ee72b054a4